--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,8 @@
 {
     "presets": [
-        "babel-core",
-        "babel-preset-es2015",
-        "babel-preset-stage-0",
-        "babel-preset-react"
+        "es2015",
+        "stage-0",
+        "react"
     ],
     "plugins": []
 }
