--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "personal react-cli",
   "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --config ./config/webpack.dev.config.js --color --progress --hot"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,22 @@
   "bugs": {
     "url": "https://github.com/jie1ong/jreact-cli/issues"
   },
-  "homepage": "https://github.com/jie1ong/jreact-cli#readme"
+  "homepage": "https://github.com/jie1ong/jreact-cli#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "7",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^1.0.1",
+    "react-hot-loader": "^4.3.12",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1"
+  }
 }
